--- a/MERCADO-ESCOLAR/src/app/login-register/login-register.component.html
+++ b/MERCADO-ESCOLAR/src/app/login-register/login-register.component.html
@@ -1,25 +1,36 @@
-<div class="wrapper fadeInDown">
-    <div id="formContent">
-      <!-- Tabs Titles -->
-      <h2 class="active"> Sign In </h2>
-      <h2 class="inactive underlineHover">Sign Up </h2>
-  
-      <!-- Icon -->
-      <div class="fadeIn first">
-        <img src="http://danielzawadzki.com/codepen/01/icon.svg" id="icon" alt="User Icon" />
-      </div>
-  
-      <!-- Login Form -->
-      <form>
-        <input type="text" id="login" class="fadeIn second" name="login" placeholder="login">
-        <input type="text" id="password" class="fadeIn third" name="login" placeholder="password">
-        <input type="submit" class="fadeIn fourth" value="Log In">
-      </form>
-  
-      <!-- Remind Passowrd -->
-      <div id="formFooter">
-        <a class="underlineHover" href="#">Forgot Password?</a>
-      </div>
-  
+<div>
+    <div class="card">
+
+        <div class="card-body" *ngIf="!isRegisterEnabled">
+            <div><h4>Sign in</h4> </div>
+            <div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. </p>
+            </div>
+            <div> <input type="email" name="email" placeholder="Email" id=""></div>
+            <div> <input type="password" name="password" placeholder="Password" id=""></div>
+            <div> <button>Sign in</button></div>
+            <div><p> <a href="http://">forgot your password ?</a> </p></div>
+            <hr>
+            <button (click)=togleRegistration()>Register</button>
+        </div>
+
+        <div class="card-body" *ngIf="isRegisterEnabled">
+            <div><h4>Register</h4> </div>
+            <div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. </p>
+            </div>
+            <div> <input type="text" name="name" placeholder="Name" id=""></div>
+            <div> <input type="date" name="dateOfBirth" placeholder="Date of birth" id=""></div>
+            <div> <input type="text" name="address" placeholder="Address" id=""></div>
+            <div> <input type="email" name="email" placeholder="Email" id=""></div>
+            <div> <input type="password" name="password" placeholder="Password" id=""></div>
+            <div> <button>Register</button></div>
+            <hr>
+            <div> <button (click)=togleSignin()>Sign in</button></div>
+            
+        </div>
+
     </div>
-  </div>
+</div>
